fix(web) backgroundImageWrapper CSS overflow:hidden

--- a/web/src/components/layout/backgroundImageWrapper.module.css
+++ b/web/src/components/layout/backgroundImageWrapper.module.css
@@ -1,6 +1,7 @@
 .backgroundImageWrapper {
   width: 100%;
   position: relative;
+  overflow: hidden;
 
   .backgroundImage {
     position: absolute;
